<resources>
    <string name="app_name">BeachList</string>
    <string name="email_field">Email</string>
    <string name="login_instructions">Use Campus Email Address to Log In</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="content_description_login_image">logo</string>
    <string name="create_account_header">Create Account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="id_num">School ID</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="expected_grad_date_lbl">Expected Graduation Date</string>
    <string name="expected_grad_date">MM/DD/YYYY</string>
    <string name="phone_lbl">Phone Number</string>
    <string name="phone_num">xxx-xxx-xxxx</string>
    <string name="pic_description">Image of user profile</string>
    <string name="id_icon_description">ID Icon Image</string>
    <string name="first_name_icon_desc">First name icon</string>
    <string name="last_name_icon_desc">Last name icon</string>
    <string name="password_icon_description">password icon</string>
    <string name="email_icon_description">email icon</string>
    <string name="pictureTextField">BeachList</string>
    <string name="cancelBtn">cancel</string>
    <string name="phone_num_icon_description">phone icon</string>
    <string name="expected_grad_icon_description">expected grad icon</string>
    <string name="account_settings_header"> Account Settings</string>
    <string name="friend_list_button_name">Friend List</string>
    <string name="edit_settings_button_name">Edit Settings</string>
    <string name="tl_current_listings">Current Listings</string>
    <string name="tl_sold_listings">Sold Listings</string>
    <string name="user_image_description">User Image</string>
    <string name="no_items_in_user">No Items Listed</string>
    <string name="no_service_in_user">No Service Listed</string>
    <string name="friend_list_tab">Friend List</string>
    <string name="pending_friend_list_tab">Pending Requests</string>
    <string name="pending_friend_list_header">Pending Requests</string>
    <string name="friend_list_header">Friend List</string>
    <string name="friend_image_description">friend Image</string>
    <string name="report_button">Report</string>
    <string name="pending_friend_image_description">potential friend Image</string>
    <string name="report_user_lbl">Report</string>
    <string name="selected_friend_image_description">selected friend Image</string>
    <string name="selected_friend_header">Selected Friend</string>
    <string name="remove_friend_label">Remove Friend</string>
    <string name="Title_lbl">Remove Title</string>
    <string name="reason_for_report">What is the reason you want to report the user</string>
    <string name="reason_for_report_listing">What is the reason you want to report this Listing</string>
    <string name="reason_header">REASON</string>
    <string name="full_name">Name:</string>
    <string name="messages_header"> Messages</string>
    <string name="user_tab"> User</string>
    <string name="item_tab"> Item</string>
    <string name="service_tab"> Service</string>
    <string name="create_post_header"> Create Post</string>
    <string name="selected_user_header"> Selected User</string>
    <string name="selected_user_Listing_header"> Listings</string>
    <string name="report_user_label"> Report User</string>
    <string name="add_user_label">Add User</string>
    <string name="selected_pending_user_header"> Selected Pending User</string>
    <string name="accept_user_label"> Accept</string>
    <string name="deny_user_label">Deny</string>
    <string name="header_page_message">Display Message</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="books_category">Textbooks</string>
    <string name="electronics_category">Electronics</string>
    <string name="furniture_category">Furniture</string>
    <string name="games_category">Games</string>
    <string name="collectible_category">Collectibles</string>
    <string name="jewelry_category">Jewelry</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="art_category">Art/Craft</string>
    <string name="appliances_category">Appliances</string>
    <string name="tutoring_category">Tutoring</string>
    <string name="repair_category">Electronic Repair</string>
    <string name="commission_category">Commission</string>
    <string name="item_category_tab">Items</string>
    <string name="service_category_tab">Services</string>
    <string name="current_listing_tab">Current Listings</string>
    <string name="sold_listing_tab">Sold Listings</string>
    <string name="friend_image_icon">friend image goes here</string>
    <string name="photo_description_bar">Photo</string>
    <string name="title_description_bar">Title</string>
    <string name="detail_description_bar">Detail</string>
    <string name="post_description_bar">Post</string>
    <string name="description_lbl">Description</string>
    <string name="next_button">Next</string>
    <string name="submit_button">Submit</string>
    <string name="listing_type">Listing Type</string>
    <string name="listing_price">Listing Price</string>
    <string name="item_rb">Item</string>
    <string name="service_rb">Service</string>
    <string name="category_type">Select A Category</string>
    <string name="price_hint">100.00</string>
    <string name="title_hint">Title goes here</string>
    <string name="description_hint">Enter a description</string>
    <string name="price_lbl">Price</string>
    <string name="category_lbl">Category</string>
    <string name="review_lbl">Review</string>
    <string name="modify_button">Modify</string>
    <string name="own_listing_description_field">Description Goes Here</string>
    <string name="own_listing_description_lbl">Description</string>
    <string name="own_listing_title">Title Goes Here</string>
    <string name="share_listing_title">Share Listing</string>
    <string-array name="categories">
        <item>book</item>
        <item>electronic</item>
        <item>furniture</item>
        <item>game</item>
    </string-array>
    <string-array name="items_categoies">
        <item>--select a category--</item>
        <item>book</item>
        <item>electronic</item>
        <item>furniture</item>
        <item>game</item>
        <item>collectible</item>
        <item>art</item>
        <item>appliances</item>
        <item>jewelry </item>
        <item>misc</item>
    </string-array>
    <string-array name="service_categoies">
        <item>--select a service--</item>
        <item>tutoring</item>
        <item>repair</item>
        <item>commission</item>
    </string-array>
    <string-array name="report_service">
        <item>--select a reason--</item>
        <item>inappropriate listing image</item>
        <item>inappropriate content listed</item>
        <item>wrong category</item>
        <item>looks like spam</item>
    </string-array>
    <string-array name="report_item">
        <item>--select a reason--</item>
        <item>inappropriate listing image</item>
        <item>inappropriate content listed</item>
        <item>wrong category</item>
        <item>looks like spam</item>
        <item>appears stolen</item>
    </string-array>
    <string-array name="report_user">
        <item>--select a reason--</item>
        <item>failed to show up to meeting</item>
        <item>Inappropriate Profile Picture</item>
        <item>rude</item>
        <item>sold broken content</item>

    </string-array>
    <string-array name="first_names">
        <item>Viet</item>
        <item>Wilfredo</item>
        <item>randall</item>
        <item>Bernie</item>
        <item>foo</item>
        <item>poopy</item>
        <item>Patrick</item>
        <item>Robert</item>
        <item>Randy</item>
        <item>wil</item>
    </string-array>
    <string-array name="last_names">
        <item>Nguyen</item>
        <item>Mendivil</item>
        <item>thornton</item>
        <item>Yusti</item>
        <item>boo</item>
        <item>mcpooperson</item>
        <item>Mahomes</item>
        <item>Acuna Jr</item>
        <item>Moss</item>
        <item>medinval</item>
    </string-array>
    <string-array name="listing_names">
        <item>pencil</item>
        <item>Wood</item>
        <item>rake</item>
        <item>Broom</item>
        <item>cake</item>
        <item>popcorn</item>
        <item>Pen</item>
        <item>Roomba</item>
        <item>Radio</item>
        <item>walkie-talkie</item>
    </string-array>
    <string-array name="listing_descriptions">
        <item>this pencil is 0.7 lead with a pack of erasers</item>
        <item>2x4 weather treated</item>
        <item>From home depot, never used</item>
        <item>metal handle, horse hair bristles</item>
        <item>vanilla with strawberry icing</item>
        <item>chocolate drizzle </item>
        <item>blue ink, pack of 7</item>
        <item>new, still in original packing</item>
        <item>wireless, 75 channels</item>
        <item>4 of them, range up to 80 miles</item>
    </string-array>
    <string-array name="listing_asking_prices">
        <item>2</item>
        <item>24</item>
        <item>12</item>
        <item>4</item>
        <item>89</item>
        <item>3</item>
        <item>11</item>
        <item>80</item>
        <item>30</item>
        <item>44</item>
    </string-array>
    <string-array name="listing_sold_prices">
        <item>1</item>
        <item>23</item>
        <item>11</item>
        <item>12</item>
        <item>1</item>
        <item>5</item>
        <item>5</item>
        <item>8</item>
        <item>23</item>
        <item>40</item>
    </string-array>
    <string-array name="listing_sold_names">
        <item>Viettttt</item>
        <item>Wilfrrrrredo</item>
        <item>randalllll</item>
        <item>Bernnnnnie</item>
        <item>foooooo</item>
        <item>poooooopy</item>
        <item>Patrickkkkk</item>
        <item>Robertttt</item>
        <item>Randyyyy</item>
        <item>willlllll</item>
    </string-array>
    <string-array name="listing_sold_dates">
        <item>1/1/20</item>
        <item>2/23/21</item>
        <item>11/23/32</item>
        <item>12/34/56</item>
        <item>1/1/30</item>
        <item>5/6/89</item>
        <item>5/5/77</item>
        <item>8/6/43</item>
        <item>23/12/12</item>
        <item>4/3/21</item>
    </string-array>
</resources>