<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0ACBD1">

    <include
        android:id="@+id/include"
        layout="@layout/friend_list_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_list_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/friend_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend_list_header"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friend_list_toolbar" />

    <Button
        android:id="@+id/btn_back_button"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:background="@drawable/ic_outline_arrow_back_ios_24"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toStartOf="@+id/tv_header"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/friend_list_toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_friend_image"
        android:layout_width="138dp"
        android:layout_height="121dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/friend_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:text="@string/first_name"
        app:layout_constraintStart_toEndOf="@+id/iv_friend_image"
        app:layout_constraintTop_toTopOf="@+id/iv_friend_image" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/last_name"
        app:layout_constraintBottom_toBottomOf="@+id/iv_friend_image"
        app:layout_constraintEnd_toEndOf="@+id/tv_first_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_first_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_name"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>