<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_primary_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292929"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_selected_user_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_user_header"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tb_primary_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/selected_user_profile_pic"
        android:layout_width="168dp"
        android:layout_height="169dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/friend_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_primary_toolbar" />

    <Button
        android:id="@+id/btn_report_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/ic_baseline_report_24"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_user_lbl" />

    <Button
        android:id="@+id/selected_user_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_outline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/tb_primary_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tb_primary_toolbar" />

    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_baseline_person_add_24"
        app:layout_constraintEnd_toEndOf="@+id/tv_listing_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_listing_header" />

    <TextView
        android:id="@+id/selected_user_first_name"
        android:layout_width="153dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="casual"
        android:text="@string/first_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_primary_toolbar" />

    <TextView
        android:id="@+id/selected_user_last_name"
        android:layout_width="156dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:text="@string/last_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/selected_user_first_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/selected_user_first_name"
        app:layout_constraintTop_toBottomOf="@+id/selected_user_first_name" />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:isIndicator="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_user_profile_pic" />

    <ScrollView
        android:id="@+id/user_listing_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="449dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_listing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#292929"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="LISTINGS" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_lbl" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF0606" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/service_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0D21E1" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_listing_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/add_user_label"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/tv_report_user_lbl"
        app:layout_constraintTop_toTopOf="@+id/tv_report_user_lbl" />

    <TextView
        android:id="@+id/tv_report_user_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/report_user_label"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/selected_user_last_name"
        app:layout_constraintTop_toBottomOf="@+id/selected_user_last_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fuzzy_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E9000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tb_primary_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="#1C1C1C"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1C1C1C"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#2E2E2E"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reason_header_tv"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="#131313"
                        android:gravity="center|center_horizontal"
                        android:text="@string/reason_header"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#575757"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2B2B2B"
                    android:gravity="center_horizontal"
                    android:text="@string/reason_for_report" />

                <Spinner
                    android:id="@+id/report_user_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="#3E3E3E" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_report_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#575757"
                        android:text="@string/cancelBtn" />

                    <Button
                        android:id="@+id/confirm_report_user_button"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#575757"
                        android:text="@string/report_button" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>